--- a/services/integration_service/pyproject.toml
+++ b/services/integration_service/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     'aioredis (>=2.0.1,<3.0.0)',
     'python-dotenv (>=1.2.1,<2.0.0)',
     'aio-pika (>=9.5.7,<10.0.0)',
+    'python-telegram-bot (>=22.5,<23.0)',
 ]
 
 
