Fix values in integration service helm chart

--- a/services/integration_service/helm/integration_service/values.yaml
+++ b/services/integration_service/helm/integration_service/values.yaml
@@ -1,5 +1,5 @@
 image:
-  repository: your-registry/telegram-bot
+  repository: onetrippin/telegram-bot
   tag: "latest"
   pullPolicy: IfNotPresent
 
