--- a/services/auth_service/pyproject.toml
+++ b/services/auth_service/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     'aioredis (>=2.0.1,<3.0.0)',
     'asyncpg (>=0.30.0,<0.31.0)',
     'aio-pika (>=9.5.7,<10.0.0)',
+    "pyjwt (>=2.10.1,<3.0.0)",
 ]
 
 
