--- a/services/message_service/pyproject.toml
+++ b/services/message_service/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     'aioredis (>=2.0.1,<3.0.0)',
     'python-dotenv (>=1.2.1,<2.0.0)',
     'aio-pika (>=9.5.7,<10.0.0)',
+    "python-socketio (>=5.15.1,<6.0.0)",
 ]
 
 
