--- a/services/integration_service/pyproject.toml
+++ b/services/integration_service/pyproject.toml
@@ -16,6 +16,8 @@ dependencies = [
     'python-dotenv (>=1.2.1,<2.0.0)',
     'aio-pika (>=9.5.7,<10.0.0)',
     'python-telegram-bot (>=22.5,<23.0)',
+    "telethon (>=1.42.0,<2.0.0)",
+    "vk-api (>=11.10.0,<12.0.0)",
 ]
 
 
